[package]
name = "gotham_examples_handlers_simple_async_handlers"
description = "An example that does asynchronous work before responding"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
publish = false

[dependencies]
gotham = { path = "../../../gotham" }
gotham_derive = { path = "../../../gotham_derive" }

hyper = "0.13.1"
mime = "0.3"
futures = "0.3.1"
serde = "1.0"
serde_derive = "1.0"
tokio = { version = "0.2.6", features = ["full"] }
