[package]
name = "gotham_examples_handlers_simple_async_handlers"
description = "An example that does asynchronous work before responding"
version = "0.0.0"
authors = ["David Laban <alsuren@gmail.com>"]
publish = false
edition = "2018"

[dependencies]
gotham = { path = "../../../gotham" }

futures-util = "0.3.14"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
